Bug 364022 - Tool options don't load on startup
Summary: Tool options don't load on startup
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 3.0
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 363756 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-06 14:10 UTC by brummerke90
Modified: 2016-06-24 06:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-24193-0.html (1.82 KB, text/html)
2016-06-20 11:07 UTC, MichalG
Details

Note You need to log in before you can comment on or make changes to this bug.
Description brummerke90 2016-06-06 14:10:55 UTC
When i start up krita the default brush is selected, but there are no tool options for it until i select another tool, and then re-select the brush tool (B).
I was really confused for a while, since i was watching a video on the smoothing options and i couldn't find it on my krita.

Reproducible: Always

Steps to Reproduce:
1. Start krita
2. Make a new file
3. Click the tool options docker (my default config has it enabled in a docker with layers/brush presets)

Actual Results:  
Nothing is visible below "Tool Options", no matter what you click in the window, until you select another tool

Expected Results:  
Smoothing options should be visible on startup
Comment 1 MichalG 2016-06-20 08:14:48 UTC
Agreed, the problem still exists!
I use Windows7 Ultimate 64-bit and it happens every time, being kinda irritating thing ...

Strangely, it seems to happen only on Windows version.
I've been lucky to use Linux Mint and I didn't see described problem there...
Comment 2 Odysseas 2016-06-20 09:52:31 UTC
I'm on Windows 10 and never had this issue.. My tool options are always visible as a normal docker along with the rest.
Comment 3 MichalG 2016-06-20 11:07:29 UTC
Created attachment 99619 [details]
attachment-24193-0.html

Well, I can see this bug on several PCs I used (at work and at home) in
Win7 mostly. Maybe it
has something to do with this exact version of Windows??? :o

2016-06-20 11:52 GMT+02:00 Odysseas via KDE Bugzilla <
bugzilla_noreply@kde.org>:

> https://bugs.kde.org/show_bug.cgi?id=364022
>
> Odysseas <xb_creations@yahoo.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |xb_creations@yahoo.com
>
> --- Comment #2 from Odysseas <xb_creations@yahoo.com> ---
> I'm on Windows 10 and never had this issue.. My tool options are always
> visible
> as a normal docker along with the rest.
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
>
Comment 4 Sven Langkamp 2016-06-21 19:18:44 UTC
Git commit 9318485a49543d06835d914b244e8a6983d52052 by Sven Langkamp.
Committed on 21/06/2016 at 19:18.
Pushed by langkamp into branch 'master'.

Directly connect toolmanager to mainwindow for the tool options widgets
Fixes the initialisation of the option widget docker/popup

M  +0    -5    libs/flake/KoCanvasControllerWidget.cpp
M  +0    -7    libs/flake/KoCanvasControllerWidget.h
M  +2    -8    libs/flake/KoToolManager.cpp
M  +4    -0    libs/flake/KoToolManager.h
M  +1    -0    libs/ui/KisMainWindow.cpp
M  +0    -1    libs/ui/KisViewManager.cpp

http://commits.kde.org/krita/9318485a49543d06835d914b244e8a6983d52052
Comment 5 Sven Langkamp 2016-06-21 19:22:01 UTC
*** Bug 363756 has been marked as a duplicate of this bug. ***
Comment 6 Halla Rempt 2016-06-24 06:20:28 UTC
Git commit f133180dd1e592a230b29423ccc9951d426c0945 by Boudewijn Rempt, on behalf of Sven Langkamp.
Committed on 24/06/2016 at 06:08.
Pushed by rempt into branch 'krita/3.0'.

Directly connect toolmanager to mainwindow for the tool options widgets
Fixes the initialisation of the option widget docker/popup

M  +0    -5    libs/flake/KoCanvasControllerWidget.cpp
M  +0    -7    libs/flake/KoCanvasControllerWidget.h
M  +2    -8    libs/flake/KoToolManager.cpp
M  +4    -0    libs/flake/KoToolManager.h
M  +1    -0    libs/ui/KisMainWindow.cpp
M  +0    -1    libs/ui/KisViewManager.cpp

http://commits.kde.org/krita/f133180dd1e592a230b29423ccc9951d426c0945