Directly connect toolmanager to mainwindow for the tool options widgets Fixes the initialisation of the option widget docker/popup

BUG:364022